# ChangeLog for dev-util/kdevelop-php-docs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop-php-docs/ChangeLog,v 1.26 2012/03/17 13:35:54 reavertm Exp $

  17 Mar 2012; Maciej Mrozowski <reavertm@gentoo.org>
  kdevelop-php-docs-1.3.0.ebuild:
  KMMODULE not needed anymore

*kdevelop-php-docs-1.3.0 (12 Mar 2012)

  12 Mar 2012; Johannes Huber <johu@gentoo.org> +kdevelop-php-docs-1.3.0.ebuild:
  Version bump.

*kdevelop-php-docs-1.2.0 (29 Oct 2011)
*kdevelop-php-docs-1.0.2 (29 Oct 2011)

  29 Oct 2011; Jonathan Callen <abcd@gentoo.org>
  +kdevelop-php-docs-1.2.0.ebuild, +kdevelop-php-docs-1.0.2.ebuild:
  Undo last commit (really this time)

  29 Oct 2011; Jonathan Callen <abcd@gentoo.org> Manifest:
  Undo last commit

  29 Oct 2011; Jonathan Callen <abcd@gentoo.org>
  -kdevelop-php-docs-1.2.0.ebuild, -kdevelop-php-docs-1.0.2.ebuild:
  remove old

  14 Aug 2011; Markus Meier <maekke@gentoo.org> kdevelop-php-docs-1.2.3.ebuild:
  x86 stable, bug #368739

  08 Aug 2011; Markos Chandras <hwoarang@gentoo.org>
  kdevelop-php-docs-1.2.3.ebuild:
  Stable on amd64 wrt bug #368739

*kdevelop-php-docs-1.2.3 (29 Jun 2011)

  29 Jun 2011; Maciej Mrozowski <reavertm@gentoo.org>
  +kdevelop-php-docs-1.2.3.ebuild:
  Version bump, bug 373485

  26 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdevelop-php-docs-1.1.2.ebuild:
  old

  12 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  kdevelop-php-docs-1.2.0.ebuild:
  Fixed linguas list, bug 359521

*kdevelop-php-docs-1.2.0 (04 Feb 2011)

  04 Feb 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdevelop-php-docs-1.2.0.ebuild:
  Version bump

  30 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  kdevelop-php-docs-1.0.2.ebuild, kdevelop-php-docs-1.1.2.ebuild:
  EAPI3

*kdevelop-php-docs-1.1.2 (17 Jan 2011)

  17 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -kdevelop-php-docs-1.1.0.ebuild, -kdevelop-php-docs-1.1.1.ebuild,