@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/kdevelop-php-docs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop-php-docs/ChangeLog,v 1.26 2012/03/17 13:35:54 reavertm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop-php-docs/ChangeLog,v 1.27 2012/04/14 23:36:53 johu Exp $
+
+*kdevelop-php-docs-1.3.1 (14 Apr 2012)
+
+  14 Apr 2012; Johannes Huber <johu@gentoo.org> +kdevelop-php-docs-1.3.1.ebuild:
+  Version bump.
 
   17 Mar 2012; Maciej Mrozowski <reavertm@gentoo.org>
   kdevelop-php-docs-1.3.0.ebuild:
